@@ -1,4 +1,4 @@
-MANIFEST for mawk, version t20090709
+MANIFEST for mawk, version t20090710
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 ACKNOWLEDGMENT                  acknowledgements
